@@ -8,6 +8,7 @@
 * Improved .travis.yml file.
 * Updated .travis.yml file.
 * Updated build files and fixed compilation issues.
+* Added build type switch and improved warning output.
 
 SphereSim 3.0.1:
 * Corrected version number.
